Fixed vc bug, screenshare backend not building, screenshare not reloading, qam button nav

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -9,4 +9,7 @@ gstreamer gst-plugins-base gst-plugins-good gst-plugins-bad gst-plugins-ugly \
 gst-plugins-base-libs gst-plugins-bad-libs gst-libav gst-plugin-pipewire \
 faac libnice orc libcdio flac fluidsynth gupnp gupnp-igd gssdp libsrtp nss
 
-ENTRYPOINT ["/backend/entrypoint.sh"]
+COPY ./entrypoint.sh /
+RUN chmod +x /entrypoint.sh
+
+ENTRYPOINT ["/entrypoint.sh"]
