Fix screensharing on SteamOS 3.5.5

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -7,7 +7,7 @@ RUN sed 's/# ParallelDownloads = 10/ParallelDownloads = 1/' /etc/pacman.conf
 RUN pacman -Sydd --noconfirm --root /pacman --dbpath /var/lib/pacman \
 gstreamer gst-plugins-base gst-plugins-good gst-plugins-bad gst-plugins-ugly \
 gst-plugins-base-libs gst-plugins-bad-libs gst-libav gst-plugin-pipewire \
-faac libnice orc libcdio flac fluidsynth gupnp gupnp-igd gssdp libsrtp nss
+faac libnice orc libcdio flac fluidsynth gupnp gupnp-igd gssdp libsrtp nss libvpx openssl
 
 COPY ./entrypoint.sh /
 RUN chmod +x /entrypoint.sh
