--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -89,8 +89,9 @@
             "dependsOn": [
                 "chmodplugins"
             ],
-            "command": "rsync -azp --chmod=D0755,F0755 --rsh='ssh -p ${config:deckport} ${config:deckkey}' out/ ${config:deckuser}@${config:deckip}:${config:deckdir}/homebrew/plugins",
-            "problemMatcher": []
+            "command": "rsync -az --no-times --no-perms -e 'ssh -p 22 -i /home/marios/.ssh/id_rsa' out/ ${config:deckuser}@${config:deckip}:${config:deckdir}/homebrew/plugins",
+            "problemMatcher": [],
+            
         },
         //
         {
